Expanding SGD losses so they natively work on batches. Following through into the trainers and parameters. This commit calls a lot of methods which need to be created in the la package.

--- a/MultiLabel/SGD/pom.xml
+++ b/MultiLabel/SGD/pom.xml
@@ -64,6 +64,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>tribuo-classification-sgd</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>tribuo-onnx</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
