--- a/MultiLabel/SGD/pom.xml
+++ b/MultiLabel/SGD/pom.xml
@@ -68,6 +68,12 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>tribuo-classification-sgd</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>tribuo-onnx</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
