--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -29,6 +29,7 @@
     <modules>
         <module>InformationTheory</module>
         <module>ONNXExport</module>
+        <module>SentencePiece</module>
         <module>Tokenization</module>
     </modules>
     <properties>
