--- a/Classification/XGBoost/pom.xml
+++ b/Classification/XGBoost/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.tribuo</groupId>
         <artifactId>tribuo-classification</artifactId>
-        <version>4.3.1</version>
+        <version>4.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <name>Classification-XGBoost</name>
