--- a/AnomalyDetection/LibLinear/pom.xml
+++ b/AnomalyDetection/LibLinear/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.tribuo</groupId>
         <artifactId>tribuo-anomaly</artifactId>
-        <version>4.3.1</version>
+        <version>4.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <name>AnomalyDetection-LibLinear</name>
