--- a/MultiLabel/SGD/pom.xml
+++ b/MultiLabel/SGD/pom.xml
@@ -20,7 +20,7 @@
     <parent>
         <groupId>org.tribuo</groupId>
         <artifactId>tribuo-multilabel</artifactId>
-        <version>4.3.1</version>
+        <version>4.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <name>MultiLabel-SGD</name>
