--- a/Reproducibility/pom.xml
+++ b/Reproducibility/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>org.tribuo</groupId>
         <artifactId>tribuo</artifactId>
-        <version>4.3.1</version>
+        <version>4.3.2-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>Reproducibility</name>
