--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.tribuo</groupId>
     <artifactId>tribuo</artifactId>
-    <version>4.3.1</version>
+    <version>4.3.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <modules>
         <module>Core</module>
@@ -51,7 +51,7 @@
         <liblinear.version>2.44</liblinear.version>
         <libsvm.version>3.25</libsvm.version>
         <onnxruntime.version>1.12.1</onnxruntime.version>
-        <tensorflow.version>0.4.2</tensorflow.version>
+        <tensorflow.version>1.0.0</tensorflow.version>
         <xgboost.version>1.6.2</xgboost.version>
 
         <!-- 3rd party other dependencies -->
@@ -416,7 +416,6 @@
             <id>arm</id>
             <properties>
                 <skipXGBoostTests>true</skipXGBoostTests>
-                <skipTFTests>true</skipTFTests>
             </properties>
         </profile>
         <profile>
