--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <artifactId>tribuo</artifactId>
         <groupId>org.tribuo</groupId>
-        <version>4.3.1</version>
+        <version>4.3.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
