Initial implementation of gaussian process regression.

--- a/Regression/pom.xml
+++ b/Regression/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) 2015-2020, Oracle and/or its affiliates. All rights reserved.
+  ~ Copyright (c) 2015, 2025, Oracle and/or its affiliates. All rights reserved.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
@@ -28,12 +28,13 @@
     <packaging>pom</packaging>
     <modules>
         <module>Core</module>
+        <module>GaussianProcess</module>
         <module>LibLinear</module>
         <module>LibSVM</module>
         <module>RegressionTree</module>
         <module>SGD</module>
-        <module>XGBoost</module>
         <module>SLM</module>
+        <module>XGBoost</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
