--- a/Util/pom.xml
+++ b/Util/pom.xml
@@ -30,6 +30,7 @@
         <module>InformationTheory</module>
         <module>ONNXExport</module>
         <module>SentencePiece</module>
+        <module>SubwordTokenization</module>
         <module>Tokenization</module>
     </modules>
     <properties>
