--- a/Util/DataBuffers/pom.xml
+++ b/Util/DataBuffers/pom.xml
@@ -24,26 +24,16 @@
         <version>5.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    <name>SubwordTokenization</name>
-    <artifactId>tribuo-util-sentencepiece</artifactId>
+    <name>DataBuffers</name>
+    <artifactId>tribuo-util-buffers</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.tribuo</groupId>
-            <artifactId>tribuo-util-buffers</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.tribuo</groupId>
-            <artifactId>tribuo-util-sentencepiece</artifactId>
-            <version>${project.version}</version>
         </dependency>
     </dependencies>
     <build>
